fixed overflow issue

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -13,7 +13,6 @@ html, body {
 	height: 100%;
 	padding: 0;
 	margin: 0;
-	overflow: hidden;
 	text-align: center;
 	font-family: RoamFont, Arial;
 	background-color: $medium-grey;
